Fixed #7167 - The borders of table don't appear on IE

--- a/src/assets/components/themes/luna-blue/theme.css
+++ b/src/assets/components/themes/luna-blue/theme.css
@@ -1856,7 +1856,7 @@ body .ui-table .ui-table-tbody > tr {
   color: #dedede;
 }
 body .ui-table .ui-table-tbody > tr > td {
-  background: inherit;
+  background-color: inherit;
   border: 1px solid #191919;
 }
 body .ui-table .ui-table-tbody > tr.ui-state-highlight {
